[gd_scene load_steps=17 format=3 uid="uid://4w500uxvqoxn"]

[ext_resource type="Theme" uid="uid://dgi7h5o885amu" path="res://maintheme.tres" id="1"]
[ext_resource type="Script" uid="uid://bl5ohpa5gy1wp" path="res://code/ui/MenuFile.cs" id="2"]
[ext_resource type="Script" uid="uid://dhn288463kcp4" path="res://code/ui/FilterStack.cs" id="3"]
[ext_resource type="Texture2D" uid="uid://dv2wre6e3phbr" path="res://TestImages/lola.jpg" id="4"]
[ext_resource type="Script" uid="uid://ck5l8ufhd1lm7" path="res://code/imaging/Shaderer.cs" id="5"]
[ext_resource type="Script" uid="uid://c2ibmxjicv8pr" path="res://code/ui/AddFilterMenu.cs" id="6"]
[ext_resource type="Script" uid="uid://ddulbgb5jmago" path="res://code/ui/CodeView.cs" id="7"]
[ext_resource type="Script" uid="uid://b4otyeoms3foe" path="res://btnSave.gd" id="8"]
[ext_resource type="PackedScene" path="res://ShaderToImage/ShaderToImage.tscn" id="9"]
[ext_resource type="StyleBox" path="res://style/stylebox_transparent.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://cnpfegbmi6klw" path="res://style/icons/refit.png" id="11"]
[ext_resource type="Script" uid="uid://b3qnhoua2gkm4" path="res://code/ui/ViewArea.cs" id="12"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;
uniform float vignettePosX_ = 0.5;
uniform float vignettePosY_ = 0.5;
uniform float vignettePower_ = 0.5;
uniform float vignetteWidth_ = 0.4;
uniform float vignetteBlur_ = 0.3;
uniform float spotlight_ = 0;
uniform vec4 vignetteColor_ : source_color = vec4(0, 0, 0, 1);
uniform bool vignetteUseDistortion_ = false;


uniform float effect_slider_val = 1.0;

float map(float value, float min1, float max1, float min2, float max2, bool clamp_result) {
    float res = min2 + (value - min1) * (max2 - min2) / (max1 - min1);
    if (clamp_result) {
        res = clamp(res, min2, max2);
    }
    return res;
}

// Precision-adjusted variations of https://www.shadertoy.com/view/4djSRW
float hash(float p) { p = fract(p * 0.011); p *= p + 7.5; p *= p + p; return fract(p); }
float hashV2(vec2 p) {vec3 p3 = fract(vec3(p.xyx) * 0.13); p3 += dot(p3, p3.yzx + 3.333); return fract((p3.x + p3.y) * p3.z); }

float noise(vec2 x) {
    vec2 i = floor(x);
    vec2 f = fract(x);

	// Four corners in 2D of a tile
	float a = hashV2(i);
    float b = hashV2(i + vec2(1.0, 0.0));
    float c = hashV2(i + vec2(0.0, 1.0));
    float d = hashV2(i + vec2(1.0, 1.0));
    vec2 u = f * f * (3.0 - 2.0 * f);
	return mix(a, b, u.x) + (c - a) * u.y * (1.0 - u.x) + (d - b) * u.x * u.y;
}

float fbm(vec2 x, int noiseOctaves) {
	float v = 0.0;
	float a = 0.5;
	vec2 shift = vec2(100);
	// Rotate to reduce axial bias
    mat2 rot = mat2(vec2(cos(0.5), sin(0.5)), vec2(-sin(0.5), cos(0.50)));
	for (int i = 0; i < noiseOctaves; ++i) {
		v += a * noise(x);
		x = rot * x * 2.0 + shift;
		a *= 0.5;
	}
	return v;
}

void fragment(){

    //variables to use
    float f_1;float f_2;float f_3;float f_4;float f_5;vec2 v2_1;vec2 v2_2;vec3 v3_1;vec3 v3_2;vec3 v3_3;
    vec2 uv = UV;


    // Distortion Filters------------------------

    if (UV.x > effect_slider_val) {
        uv = UV;
    }
    COLOR = texture(TEXTURE, uv);
    vec4 previous = COLOR;

    // Color Filters-----------------------------

    //Vignette
    if (vignetteUseDistortion_) {
        f_1 = 1.0 - distance(fract(uv), vec2(vignettePosX_, 1.0 - vignettePosY_));
    }
    else {
        f_1 = 1.0 - distance(UV, vec2(vignettePosX_, 1.0 - vignettePosY_));
    }
    f_2 = map(f_1, 1.0 - (vignetteWidth_ + (vignetteBlur_ + 0.001) / 2.0) * 1.5, 1.0 - vignetteWidth_ * 1.5 + vignetteBlur_ + 0.001, 0.0, 1.0, true);
    f_2 = f_2 * f_2;
    COLOR = mix(vignetteColor_, COLOR, 1.0-(1.0-f_2)*vignettePower_) * vec4(1.0 + f_2 * spotlight_);

    if (UV.x > effect_slider_val) {
        COLOR = previous;
    }
}"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/vignettePosX_ = -0.055
shader_parameter/vignettePosY_ = 0.5
shader_parameter/vignettePower_ = 0.5
shader_parameter/vignetteWidth_ = 0.4
shader_parameter/vignetteBlur_ = 0.3
shader_parameter/spotlight_ = 0.0
shader_parameter/vignetteColor_ = Color(0, 0, 0, 1)
shader_parameter/vignetteUseDistortion_ = false
shader_parameter/effect_slider_val = 1.0

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.305882, 0.305882, 0.305882, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)
expand_margin_left = 10.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")

[node name="ShaderToImage" parent="." instance=ExtResource("9")]
_viewer = NodePath("../VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="Topbar" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Menus" type="HBoxContainer" parent="VBoxContainer/Topbar"]
layout_mode = 0
offset_right = 191.0
offset_bottom = 24.0

[node name="BtnOpen" type="Button" parent="VBoxContainer/Topbar/Menus"]
layout_mode = 2
text = "Open"
script = ExtResource("2")

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/Topbar/Menus/BtnOpen"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="BtnSave" type="Button" parent="VBoxContainer/Topbar/Menus"]
layout_mode = 2
text = "Save"
script = ExtResource("8")
shader_to_image = NodePath("../../../../ShaderToImage")
viewer = NodePath("../../../HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer")

[node name="FileDialogSave" type="FileDialog" parent="VBoxContainer/Topbar/Menus/BtnSave"]
access = 2
filters = PackedStringArray("*.png")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewerContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 11

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("12")

[node name="Viewer" type="Sprite2D" parent="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer"]
z_index = -1
material = SubResource("2")
position = Vector2(650.297, 391.327)
scale = Vector2(1.28535, 1.18742)
texture = ExtResource("4")
script = ExtResource("5")
CodeViewer = NodePath("../../../CodeView")
ShaderToImage = NodePath("../../../../../../ShaderToImage")
ViewportArea = NodePath("..")
ZoomSpeed = 0.1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BtnRecenter" type="Button" parent="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer2"]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_styles/focus = ExtResource("10")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/hover = ExtResource("10")
theme_override_styles/pressed = ExtResource("10")
theme_override_styles/normal = ExtResource("10")
icon = ExtResource("11")
expand_icon = true

[node name="EffectSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer"]
custom_minimum_size = Vector2(100, 22)
layout_mode = 2
theme_override_styles/slider = SubResource("3")
max_value = 1.0
step = 0.001
value = 1.0

[node name="CodeView" type="TextEdit" parent="VBoxContainer/HBoxContainer/VSplitContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35
theme_override_colors/background_color = Color(0.241156, 0.241156, 0.241156, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "No Code generated yet"
script = ExtResource("7")

[node name="Sidebar" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Sidebar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -33.0

[node name="btnAddFilter" type="MenuButton" parent="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Add Filter"
flat = false
script = ExtResource("6")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FilterStackContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("3")

[node name="CustomCodeEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/background_color = Color(0.197937, 0.197937, 0.197937, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer"]
layout_mode = 2
text = "Compile"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Sidebar"]
custom_minimum_size = Vector2(260, 33)
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -33.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Sidebar/Panel"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -33.0
offset_right = 250.0
offset_bottom = 1.0

[node name="btnCodeView" type="CheckButton" parent="VBoxContainer/HBoxContainer/Sidebar/Panel/HBoxContainer"]
layout_mode = 2

[node name="lblCodeView" type="Label" parent="VBoxContainer/HBoxContainer/Sidebar/Panel/HBoxContainer"]
layout_mode = 2
text = "Show Shadercode"

[connection signal="pressed" from="VBoxContainer/Topbar/Menus/BtnOpen" to="VBoxContainer/Topbar/Menus/BtnOpen" method="OnOpenFile"]
[connection signal="file_selected" from="VBoxContainer/Topbar/Menus/BtnOpen/FileDialog" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnLoadImage"]
[connection signal="pressed" from="VBoxContainer/Topbar/Menus/BtnSave" to="VBoxContainer/Topbar/Menus/BtnSave" method="_on_Button_pressed"]
[connection signal="file_selected" from="VBoxContainer/Topbar/Menus/BtnSave/FileDialogSave" to="VBoxContainer/Topbar/Menus/BtnSave" method="_on_FileDialog_file_selected"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnMouseEntered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnMouseExited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer2/BtnRecenter" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnReCenter"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/EffectSlider" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnEffectSliderChanged"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Sidebar/VBoxContainer/Button" to="VBoxContainer/HBoxContainer/VSplitContainer/ViewerContainer/CenterContainer/Viewer" method="OnRecompile"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Sidebar/Panel/HBoxContainer/btnCodeView" to="VBoxContainer/HBoxContainer/VSplitContainer/CodeView" method="OnToggleCodeView"]
